--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,12 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.5
+  dio: ^4.0.0
+  flutter_polyline_points: ^0.2.6
+  google_maps_flutter: ^2.0.2
+  http: ^0.13.4
+  geolocator: ^8.0.5
+
 
 dev_dependencies:
   flutter_test:
