--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   geocoding:
   fluttertoast:
   flutter_local_notifications: ^7.0.0
+  firebase_messaging: ^10.0.1
+  firebase_core: ^1.2.1
+  firebase_auth: 
 
 
 dev_dependencies:
