--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   geolocator: ^8.0.5
   geocoding:
   fluttertoast:
+  flutter_local_notifications: ^7.0.0
+  firebase_messaging: ^10.0.1
+  firebase_core: ^1.2.1
+  firebase_auth: 
 
 
 dev_dependencies:
